<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="alimapps.kz.bitcoinformatter.viewmodel.InfoViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.InfoFragment">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_bitcoin"
                tools:text="Bitcoin"
                android:textSize="@dimen/base_text_size"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" android:id="@+id/textView"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/base_text_size"
                android:textColor="@android:color/black"
                android:text="@string/label_current_exchange_rate_text"
                app:layout_constraintStart_toStartOf="@+id/textView"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" android:id="@+id/textView2"
                app:layout_constraintEnd_toEndOf="@+id/textView"/>

        <TextView
                android:layout_width="0dp"
                android:textSize="@dimen/base_text_size"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.rateObserver}"
                tools:text="100"
                android:gravity="center"
                android:id="@+id/textView3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/first"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/radioGroup"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3">

            <RadioButton
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kzt"/>

            <RadioButton
                    android:id="@+id/second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"/>

            <RadioButton
                    android:id="@+id/third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur"/>

        </RadioGroup>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup2">

            <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.progressBarVisible ? View.VISIBLE : View.GONE}"/>

        </FrameLayout>

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/week_r"
                android:id="@+id/radioGroup2" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                    android:id="@+id/week_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_week"/>

            <RadioButton
                    android:id="@+id/month_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_month"/>

            <RadioButton
                    android:id="@+id/year_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_year"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>