<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" xmlns:btc="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="data"
                type="alimapps.kz.bitcoinformatter.classes.ConverterData"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.ConverterFragment">

        <TextView
                android:textSize="@dimen/base_text_size"
                android:textColor="@android:color/black"
                android:text="@string/label_buy_btc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView5"/>

        <EditText
                android:hint="@string/hint_enter_sum"
                android:text="@={data.moneyField}"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/editText"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
        />

        <TextView
                android:text="@{data.symbol}"
                tools:text="$"
                android:textSize="@dimen/base_text_size"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/editText"
                app:layout_constraintTop_toTopOf="@+id/editText"
                app:layout_constraintBottom_toBottomOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="@+id/textView5"/>

        <TextView
                btc:symbol="@{data.btcSymbol}"
                btc:value="@{data.btcValue}"
                android:layout_width="0dp"
                android:textSize="@dimen/base_text_size"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                tools:text="0 BTC"
                android:gravity="center"
                android:id="@+id/textView6"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:text="@string/label_sell_btc"
                android:layout_width="wrap_content"
                android:textSize="@dimen/base_text_size"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/textView8"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>

        <EditText
                android:hint="@string/hint_enter_btc"
                android:text="@={data.btcField}"
                android:layout_width="wrap_content"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/editText2"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
        />

        <TextView
                android:text="@{data.btcSymbol}"
                android:textSize="@dimen/base_text_size"
                android:textColor="@color/colorAccent"
                tools:text="BTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="@+id/editText2"
                app:layout_constraintBottom_toBottomOf="@+id/editText2"
                app:layout_constraintEnd_toEndOf="@+id/textView8"/>

        <TextView
                btc:symbol="@{data.symbol}"
                btc:value="@{data.moneyValue}"
                android:layout_width="0dp"
                android:textSize="@dimen/base_text_size"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:gravity="center"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText2"
                tools:text="0 $" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/first"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

            <RadioButton
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kzt"/>

            <RadioButton
                    android:id="@+id/second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"/>

            <RadioButton
                    android:id="@+id/third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>